pypropneu/LparseInputParser.py
# Generated from C:/Users/Giovanni/PycharmProjects/pylppn/grammars\LparseInput.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class LparseInputParser ( Parser ):

    grammarFileName = "LparseInput.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'hide'", u"'show'", u"<INVALID>", u"':-'", 
                     u"'.'", u"','", u"'('", u"')'", u"'{'", u"'}'", u"'='", 
                     u"'!='", u"'>'", u"'<'", u"'>='", u"'<='", u"'not'", 
                     u"'+'", u"'-'", u"'_'", u"'#domain'", u"'..'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"WS", u"ENTAILS", 
                      u"DOT", u"COMMA", u"LPAR", u"RPAR", u"LACC", u"RACC", 
                      u"EQ", u"NEQ", u"GT", u"LT", u"GE", u"LE", u"NOT", 
                      u"PLUS", u"MINUS", u"UNDERSCORE", u"DOMAIN", u"RANGELEX", 
                      u"INTEGER", u"IDENTIFIER", u"VARIABLE", u"SINGLE_LINE_COMMENT", 
                      u"MULTILINE_COMMENT" ]

    RULE_program = 0
    RULE_directive = 1
    RULE_asprule = 2
    RULE_aspfact = 3
    RULE_rangedef = 4
    RULE_normrule = 5
    RULE_constraint = 6
    RULE_choice = 7
    RULE_head = 8
    RULE_body = 9
    RULE_list_literals = 10
    RULE_list_ext_literals_expressions = 11
    RULE_expression = 12
    RULE_num_expression = 13
    RULE_ext_literal = 14
    RULE_literal = 15
    RULE_pos_literal = 16
    RULE_list_parameters = 17
    RULE_predicate = 18
    RULE_identifier = 19
    RULE_constant = 20
    RULE_variable = 21

    ruleNames =  [ u"program", u"directive", u"asprule", u"aspfact", u"rangedef", 
                   u"normrule", u"constraint", u"choice", u"head", u"body", 
                   u"list_literals", u"list_ext_literals_expressions", u"expression", 
                   u"num_expression", u"ext_literal", u"literal", u"pos_literal", 
                   u"list_parameters", u"predicate", u"identifier", u"constant", 
                   u"variable" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    WS=3
    ENTAILS=4
    DOT=5
    COMMA=6
    LPAR=7
    RPAR=8
    LACC=9
    RACC=10
    EQ=11
    NEQ=12
    GT=13
    LT=14
    GE=15
    LE=16
    NOT=17
    PLUS=18
    MINUS=19
    UNDERSCORE=20
    DOMAIN=21
    RANGELEX=22
    INTEGER=23
    IDENTIFIER=24
    VARIABLE=25
    SINGLE_LINE_COMMENT=26
    MULTILINE_COMMENT=27

    def __init__(self, input):
        super(LparseInputParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LparseInputParser.EOF, 0)

        def directive(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LparseInputParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(LparseInputParser.DirectiveContext,i)


        def aspfact(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LparseInputParser.AspfactContext)
            else:
                return self.getTypedRuleContext(LparseInputParser.AspfactContext,i)


        def asprule(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LparseInputParser.AspruleContext)
            else:
                return self.getTypedRuleContext(LparseInputParser.AspruleContext,i)


        def getRuleIndex(self):
            return LparseInputParser.RULE_program

        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)




    def program(self):

        localctx = LparseInputParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LparseInputParser.T__0) | (1 << LparseInputParser.T__1) | (1 << LparseInputParser.ENTAILS) | (1 << LparseInputParser.LACC) | (1 << LparseInputParser.MINUS) | (1 << LparseInputParser.DOMAIN) | (1 << LparseInputParser.INTEGER) | (1 << LparseInputParser.IDENTIFIER))) != 0):
                self.state = 47
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 44
                    self.directive()
                    pass

                elif la_ == 2:
                    self.state = 45
                    self.aspfact()
                    pass

                elif la_ == 3:
                    self.state = 46
                    self.asprule()
                    pass


                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(LparseInputParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DirectiveContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.DirectiveContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DOMAIN(self):
            return self.getToken(LparseInputParser.DOMAIN, 0)

        def list_literals(self):
            return self.getTypedRuleContext(LparseInputParser.List_literalsContext,0)


        def DOT(self):
            return self.getToken(LparseInputParser.DOT, 0)

        def getRuleIndex(self):
            return LparseInputParser.RULE_directive

        def enterRule(self, listener):
            if hasattr(listener, "enterDirective"):
                listener.enterDirective(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDirective"):
                listener.exitDirective(self)




    def directive(self):

        localctx = LparseInputParser.DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_directive)
        self._la = 0 # Token type
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LparseInputParser.DOMAIN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.match(LparseInputParser.DOMAIN)
                self.state = 55
                self.list_literals()
                self.state = 56
                self.match(LparseInputParser.DOT)
                pass
            elif token in [LparseInputParser.T__0, LparseInputParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                _la = self._input.LA(1)
                if not(_la==LparseInputParser.T__0 or _la==LparseInputParser.T__1):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LparseInputParser.MINUS or _la==LparseInputParser.IDENTIFIER:
                    self.state = 59
                    self.list_literals()


                self.state = 62
                self.match(LparseInputParser.DOT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AspruleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.AspruleContext, self).__init__(parent, invokingState)
            self.parser = parser

        def normrule(self):
            return self.getTypedRuleContext(LparseInputParser.NormruleContext,0)


        def constraint(self):
            return self.getTypedRuleContext(LparseInputParser.ConstraintContext,0)


        def getRuleIndex(self):
            return LparseInputParser.RULE_asprule

        def enterRule(self, listener):
            if hasattr(listener, "enterAsprule"):
                listener.enterAsprule(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAsprule"):
                listener.exitAsprule(self)




    def asprule(self):

        localctx = LparseInputParser.AspruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_asprule)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LparseInputParser.LACC, LparseInputParser.MINUS, LparseInputParser.INTEGER, LparseInputParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.normrule()
                pass
            elif token in [LparseInputParser.ENTAILS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.constraint()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AspfactContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.AspfactContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(LparseInputParser.DOT, 0)

        def head(self):
            return self.getTypedRuleContext(LparseInputParser.HeadContext,0)


        def rangedef(self):
            return self.getTypedRuleContext(LparseInputParser.RangedefContext,0)


        def getRuleIndex(self):
            return LparseInputParser.RULE_aspfact

        def enterRule(self, listener):
            if hasattr(listener, "enterAspfact"):
                listener.enterAspfact(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspfact"):
                listener.exitAspfact(self)




    def aspfact(self):

        localctx = LparseInputParser.AspfactContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_aspfact)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 69
                self.head()
                pass

            elif la_ == 2:
                self.state = 70
                self.rangedef()
                pass


            self.state = 73
            self.match(LparseInputParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RangedefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.RangedefContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.rangemin = None # Token
            self.rangemax = None # Token

        def identifier(self):
            return self.getTypedRuleContext(LparseInputParser.IdentifierContext,0)


        def LPAR(self):
            return self.getToken(LparseInputParser.LPAR, 0)

        def RANGELEX(self):
            return self.getToken(LparseInputParser.RANGELEX, 0)

        def RPAR(self):
            return self.getToken(LparseInputParser.RPAR, 0)

        def INTEGER(self, i=None):
            if i is None:
                return self.getTokens(LparseInputParser.INTEGER)
            else:
                return self.getToken(LparseInputParser.INTEGER, i)

        def getRuleIndex(self):
            return LparseInputParser.RULE_rangedef

        def enterRule(self, listener):
            if hasattr(listener, "enterRangedef"):
                listener.enterRangedef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRangedef"):
                listener.exitRangedef(self)




    def rangedef(self):

        localctx = LparseInputParser.RangedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rangedef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.identifier()
            self.state = 76
            self.match(LparseInputParser.LPAR)
            self.state = 77
            localctx.rangemin = self.match(LparseInputParser.INTEGER)
            self.state = 78
            self.match(LparseInputParser.RANGELEX)
            self.state = 79
            localctx.rangemax = self.match(LparseInputParser.INTEGER)
            self.state = 80
            self.match(LparseInputParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NormruleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.NormruleContext, self).__init__(parent, invokingState)
            self.parser = parser

        def head(self):
            return self.getTypedRuleContext(LparseInputParser.HeadContext,0)


        def ENTAILS(self):
            return self.getToken(LparseInputParser.ENTAILS, 0)

        def body(self):
            return self.getTypedRuleContext(LparseInputParser.BodyContext,0)


        def DOT(self):
            return self.getToken(LparseInputParser.DOT, 0)

        def getRuleIndex(self):
            return LparseInputParser.RULE_normrule

        def enterRule(self, listener):
            if hasattr(listener, "enterNormrule"):
                listener.enterNormrule(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNormrule"):
                listener.exitNormrule(self)




    def normrule(self):

        localctx = LparseInputParser.NormruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_normrule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.head()
            self.state = 83
            self.match(LparseInputParser.ENTAILS)
            self.state = 84
            self.body()
            self.state = 85
            self.match(LparseInputParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.ConstraintContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ENTAILS(self):
            return self.getToken(LparseInputParser.ENTAILS, 0)

        def body(self):
            return self.getTypedRuleContext(LparseInputParser.BodyContext,0)


        def DOT(self):
            return self.getToken(LparseInputParser.DOT, 0)

        def getRuleIndex(self):
            return LparseInputParser.RULE_constraint

        def enterRule(self, listener):
            if hasattr(listener, "enterConstraint"):
                listener.enterConstraint(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitConstraint"):
                listener.exitConstraint(self)




    def constraint(self):

        localctx = LparseInputParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(LparseInputParser.ENTAILS)
            self.state = 88
            self.body()
            self.state = 89
            self.match(LparseInputParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ChoiceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.ChoiceContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.choicemin = None # Token
            self.choicemax = None # Token

        def LACC(self):
            return self.getToken(LparseInputParser.LACC, 0)

        def list_literals(self):
            return self.getTypedRuleContext(LparseInputParser.List_literalsContext,0)


        def RACC(self):
            return self.getToken(LparseInputParser.RACC, 0)

        def INTEGER(self, i=None):
            if i is None:
                return self.getTokens(LparseInputParser.INTEGER)
            else:
                return self.getToken(LparseInputParser.INTEGER, i)

        def getRuleIndex(self):
            return LparseInputParser.RULE_choice

        def enterRule(self, listener):
            if hasattr(listener, "enterChoice"):
                listener.enterChoice(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitChoice"):
                listener.exitChoice(self)




    def choice(self):

        localctx = LparseInputParser.ChoiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_choice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LparseInputParser.INTEGER:
                self.state = 91
                localctx.choicemin = self.match(LparseInputParser.INTEGER)


            self.state = 94
            self.match(LparseInputParser.LACC)
            self.state = 95
            self.list_literals()
            self.state = 96
            self.match(LparseInputParser.RACC)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LparseInputParser.INTEGER:
                self.state = 97
                localctx.choicemax = self.match(LparseInputParser.INTEGER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeadContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.HeadContext, self).__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(LparseInputParser.LiteralContext,0)


        def choice(self):
            return self.getTypedRuleContext(LparseInputParser.ChoiceContext,0)


        def getRuleIndex(self):
            return LparseInputParser.RULE_head

        def enterRule(self, listener):
            if hasattr(listener, "enterHead"):
                listener.enterHead(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitHead"):
                listener.exitHead(self)




    def head(self):

        localctx = LparseInputParser.HeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_head)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LparseInputParser.MINUS, LparseInputParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.literal()
                pass
            elif token in [LparseInputParser.LACC, LparseInputParser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.choice()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.BodyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def list_ext_literals_expressions(self):
            return self.getTypedRuleContext(LparseInputParser.List_ext_literals_expressionsContext,0)


        def choice(self):
            return self.getTypedRuleContext(LparseInputParser.ChoiceContext,0)


        def getRuleIndex(self):
            return LparseInputParser.RULE_body

        def enterRule(self, listener):
            if hasattr(listener, "enterBody"):
                listener.enterBody(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBody"):
                listener.exitBody(self)




    def body(self):

        localctx = LparseInputParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_body)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.list_ext_literals_expressions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.choice()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_literalsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.List_literalsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(LparseInputParser.LiteralContext,0)


        def COMMA(self):
            return self.getToken(LparseInputParser.COMMA, 0)

        def list_literals(self):
            return self.getTypedRuleContext(LparseInputParser.List_literalsContext,0)


        def getRuleIndex(self):
            return LparseInputParser.RULE_list_literals

        def enterRule(self, listener):
            if hasattr(listener, "enterList_literals"):
                listener.enterList_literals(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitList_literals"):
                listener.exitList_literals(self)




    def list_literals(self):

        localctx = LparseInputParser.List_literalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_list_literals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.literal()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LparseInputParser.COMMA:
                self.state = 109
                self.match(LparseInputParser.COMMA)
                self.state = 110
                self.list_literals()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_ext_literals_expressionsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.List_ext_literals_expressionsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ext_literal(self):
            return self.getTypedRuleContext(LparseInputParser.Ext_literalContext,0)


        def expression(self):
            return self.getTypedRuleContext(LparseInputParser.ExpressionContext,0)


        def COMMA(self):
            return self.getToken(LparseInputParser.COMMA, 0)

        def list_ext_literals_expressions(self):
            return self.getTypedRuleContext(LparseInputParser.List_ext_literals_expressionsContext,0)


        def getRuleIndex(self):
            return LparseInputParser.RULE_list_ext_literals_expressions

        def enterRule(self, listener):
            if hasattr(listener, "enterList_ext_literals_expressions"):
                listener.enterList_ext_literals_expressions(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitList_ext_literals_expressions"):
                listener.exitList_ext_literals_expressions(self)




    def list_ext_literals_expressions(self):

        localctx = LparseInputParser.List_ext_literals_expressionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_list_ext_literals_expressions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 113
                self.ext_literal()
                pass

            elif la_ == 2:
                self.state = 114
                self.expression()
                pass


            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LparseInputParser.COMMA:
                self.state = 117
                self.match(LparseInputParser.COMMA)
                self.state = 118
                self.list_ext_literals_expressions()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(LparseInputParser.EQ, 0)

        def NEQ(self):
            return self.getToken(LparseInputParser.NEQ, 0)

        def LT(self):
            return self.getToken(LparseInputParser.LT, 0)

        def LE(self):
            return self.getToken(LparseInputParser.LE, 0)

        def GT(self):
            return self.getToken(LparseInputParser.GT, 0)

        def GE(self):
            return self.getToken(LparseInputParser.GE, 0)

        def identifier(self):
            return self.getTypedRuleContext(LparseInputParser.IdentifierContext,0)


        def variable(self):
            return self.getTypedRuleContext(LparseInputParser.VariableContext,0)


        def INTEGER(self, i=None):
            if i is None:
                return self.getTokens(LparseInputParser.INTEGER)
            else:
                return self.getToken(LparseInputParser.INTEGER, i)

        def num_expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LparseInputParser.Num_expressionContext)
            else:
                return self.getTypedRuleContext(LparseInputParser.Num_expressionContext,i)


        def IDENTIFIER(self):
            return self.getToken(LparseInputParser.IDENTIFIER, 0)

        def VARIABLE(self):
            return self.getToken(LparseInputParser.VARIABLE, 0)

        def getRuleIndex(self):
            return LparseInputParser.RULE_expression

        def enterRule(self, listener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)




    def expression(self):

        localctx = LparseInputParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 121
                self.identifier()
                pass

            elif la_ == 2:
                self.state = 122
                self.variable()
                pass

            elif la_ == 3:
                self.state = 123
                self.match(LparseInputParser.INTEGER)
                pass

            elif la_ == 4:
                self.state = 124
                self.num_expression()
                pass


            self.state = 127
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LparseInputParser.EQ) | (1 << LparseInputParser.NEQ) | (1 << LparseInputParser.GT) | (1 << LparseInputParser.LT) | (1 << LparseInputParser.GE) | (1 << LparseInputParser.LE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 128
                self.match(LparseInputParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.state = 129
                self.match(LparseInputParser.VARIABLE)
                pass

            elif la_ == 3:
                self.state = 130
                self.match(LparseInputParser.INTEGER)
                pass

            elif la_ == 4:
                self.state = 131
                self.num_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Num_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.Num_expressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(LparseInputParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(LparseInputParser.MINUS, 0)

        def variable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LparseInputParser.VariableContext)
            else:
                return self.getTypedRuleContext(LparseInputParser.VariableContext,i)


        def INTEGER(self, i=None):
            if i is None:
                return self.getTokens(LparseInputParser.INTEGER)
            else:
                return self.getToken(LparseInputParser.INTEGER, i)

        def getRuleIndex(self):
            return LparseInputParser.RULE_num_expression

        def enterRule(self, listener):
            if hasattr(listener, "enterNum_expression"):
                listener.enterNum_expression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNum_expression"):
                listener.exitNum_expression(self)




    def num_expression(self):

        localctx = LparseInputParser.Num_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_num_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LparseInputParser.VARIABLE]:
                self.state = 134
                self.variable()
                pass
            elif token in [LparseInputParser.INTEGER]:
                self.state = 135
                self.match(LparseInputParser.INTEGER)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 138
            _la = self._input.LA(1)
            if not(_la==LparseInputParser.PLUS or _la==LparseInputParser.MINUS):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LparseInputParser.VARIABLE]:
                self.state = 139
                self.variable()
                pass
            elif token in [LparseInputParser.INTEGER]:
                self.state = 140
                self.match(LparseInputParser.INTEGER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ext_literalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LparseInputParser.Ext_literalContext, self).__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(LparseInputParser.LiteralContext,0)


        def NOT(self):
            return self.getToken(LparseInputParser.NOT, 0)

        def getRuleIndex(self):
            return LparseInputParser.RULE_ext_literal

        def enterRule(self, listener):
            if hasattr(listener, "enterExt_literal"):
                listener.enterExt_literal(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExt_literal"):
                listener.exitExt_literal(self)




    def ext_literal(self):
